Several CSS fixes mostly color related issue, also wrapped the progress/spinner in a container.

--- a/DropBear.Blazor.Components/Loaders/LongWaitProgressBar.razor.css
+++ b/DropBear.Blazor.Components/Loaders/LongWaitProgressBar.razor.css
@@ -1,4 +1,4 @@
-﻿.container {
+﻿.loading-progress-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,6 +84,14 @@ h3 i {
 
 .progress-text {
   color: var(--clr-heading);
+  font-size: 0.8rem;
+  font-weight: 600;
+  position: relative;
+  z-index: 1;
+}
+
+.processing-text {
+  color: var(--clr-heading, #ffffff);
   font-size: 0.8rem;
   font-weight: 600;
   position: relative;
