--- a/DropBear.Blazor.Components/Loaders/ShortWaitSpinner.razor.css
+++ b/DropBear.Blazor.Components/Loaders/ShortWaitSpinner.razor.css
@@ -1,4 +1,4 @@
-﻿.container {
+﻿.loading-spinner-container {
   display: flex;
   justify-content: center;
   align-items: center;
